+--------------------------+
Thu Jan 10 08:15:19 GMT+7 2013
cups-filters: Upgraded to 1.0.29
  Now requires qpdf
qpdf: Added

+--------------------------+
Mon Jan  7 12:35:06 GMT+7 2013
dropbox: Upgraded to 0.9.12

+--------------------------+
Sun Jan  6 21:24:46 GMT+7 2013
harfbuzz: Upgraded to 0.9.10

+--------------------------+
Sun Jan  6 15:56:14 GMT+7 2013
gtkpod: Upgraded to 2.1.3

+--------------------------+
Fri Jan  4 18:03:49 GMT+7 2013
calibre: Upgraded to 0.9.13

+--------------------------+
Thu Jan  3 16:00:40 GMT+7 2013
gdl: Upgraded to 3.7.3
gtksourceview3: Upgraded to 3.7.1

+--------------------------+
Thu Jan  3 15:35:56 GMT+7 2013
calibre: Upgraded to 0.9.12

+--------------------------+
Thu Jan  3 11:46:30 GMT+7 2013
mysql-workbench: Upgraded to 5.2.45

+--------------------------+
Tue Dec 25 10:54:26 GMT+7 2012
guvcview: Added version 1.6.1

+--------------------------+
Sat Dec 22 09:54:47 GMT+7 2012
dropbox: Upgraded to 1.6.9

+--------------------------+
Sat Dec 22 07:54:49 GMT+7 2012
calibre: Upgraded to 0.9.11

+--------------------------+
Sun Dec 16 11:52:07 GMT+7 2012
dropbox: Upgraded to 1.6.5

+--------------------------+
Sun Dec 16 11:30:56 GMT+7 2012
OpenAL: Upgraded to 1.15.1
ProjectLibre: Upgraded to 1.5.2

+--------------------------+
Sat Dec 15 15:53:41 GMT+7 2012
wireshark: Upgraded to 1.8.4

+--------------------------+
Sat Dec 15 15:27:04 GMT+7 2012
libmygpo-qt: Added
  This is a C++/Qt Client Library
  An optional dependency for future Amarok 2.7

+--------------------------+
Sat Dec 15 07:21:12 GMT+7 2012
calibre: Upgraded to 0.9.10

+--------------------------+
Mon Dec 10 06:48:59 GMT+7 2012
harfbuzz: Upgraded to 0.9.9

+--------------------------+
Sat Dec  8 16:30:57 GMT+7 2012
calibre: Upgraded to 0.9.9

+--------------------------+
Sun Dec  2 21:05:27 GMT+7 2012
paramiko: Added version 1.9.0

+--------------------------+
Sat Dec  1 13:49:30 GMT+7 2012
calibre: Upgraded to 0.9.8

+--------------------------+