@@ -548,6 +548,16 @@ SLACKBUILD MD5SUM: a81808d847732f8dafb59d26ec2eebbf
 SLACKBUILD MD5SUM_x86_64: 
 SLACKBUILD SHORT DESCRIPTION:  Sysprof (Performance Profiler)
 
+SLACKBUILD NAME: teamviewer
+SLACKBUILD LOCATION: ./teamviewer
+SLACKBUILD FILES: README doinst.sh rc.teamviewerd slack-desc teamviewer.SlackBuild teamviewer.info
+SLACKBUILD VERSION: 8.0.16675
+SLACKBUILD DOWNLOAD: http://www.teamviewer.com/download/version_8x/teamviewer_linux.deb
+SLACKBUILD DOWNLOAD_x86_64: http://www.teamviewer.com/download/version_8x/teamviewer_linux_x64.deb
+SLACKBUILD MD5SUM: 8615365b444eb3927cefbbf3dbed6ffa
+SLACKBUILD MD5SUM_x86_64: 4f718ad52ea9091fab4218968a3c1fd7
+SLACKBUILD SHORT DESCRIPTION:  teamviewer (remote control application)
+
 SLACKBUILD NAME: vala
 SLACKBUILD LOCATION: ./vala
 SLACKBUILD FILES: README slack-desc vala.SlackBuild vala.info
