@@ -1,0 +1,8 @@
+TeamViewer is a remote control application. TeamViewer provides easy,
+fast and secure remote access to Linux, Windows PCs, and Macs.
+
+NOTE: The 64-bit package only works in a multi-lib environment, and it
+requires these 32-bit packages: glibc, zlib, freetype, alsa-lib, GConf.
+
+You must give execute permission and run the script 
+/etc/rc.d/rc.teamviewerd prior launching teamviewer
