@@ -1,0 +1,41 @@
+#!/bin/sh
+#
+# /etc/rc.d/rc.teamviewerd
+#
+# Start/stop/restart the TeamViewer Daemon
+#
+# To make TeamViewer Daemon start automatically at boot, make this
+# file executable:  chmod 755 /etc/rc.d/rc.teamviewerd
+#
+
+teamviewerd_start() {
+  if [ -x /opt/teamviewer8/tv_bin/teamviewerd ]; then
+    echo "Starting TeamViewer Daemon"
+    /opt/teamviewer8/tv_bin/teamviewerd    
+  fi
+}
+
+teamviewerd_stop() {
+    echo "Terminating TeamViewer Daemon"
+  killall teamviewerd
+}
+
+teamviewerd_restart() {
+  teamviewerd_stop
+  sleep 2
+  teamviewerd_start
+}
+
+case "$1" in
+'start')
+  teamviewerd_start
+  ;;
+'stop')
+  teamviewerd_stop
+  ;;
+'restart')
+  teamviewerd_restart
+  ;;
+*)
+  teamviewerd_start
+esac
