@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|'
+# on the right side marks the last column you can put a character in.  You must
+# make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':'.
+
+          |-----handy-ruler------------------------------------------------------|
+teamviewer: teamviewer (remote control application)
+teamviewer:
+teamviewer: TeamViewer is a remote control application. TeamViewer provides easy,
+teamviewer: fast, and secure remote access to Linux, Windows PCs, and Macs.
+teamviewer:
+teamviewer: TeamViewer is free for personal use. You can use TeamViewer completely
+teamviewer: free of charge to access your private computers or to help your
+teamviewer: friends with their computer problems.
+teamviewer:
+teamviewer: Homepage: http://www.teamviewer.com/
+teamviewer:
