@@ -1,0 +1,113 @@
+#!/bin/sh
+
+# Slackware build script for teamviewer
+
+# Copyright 2010-2012  Binh Nguyen <binhvng@gmail.com>
+# Copyright 2013 Willy Sudiarto Raharjo <willysr@slackware-id.org>
+# All rights reserved.
+#
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+#
+# 1. Redistributions of this script must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+#  THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR IMPLIED
+#  WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+#  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO
+#  EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+#  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+#  OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+#  WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+#  OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+#  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+# Modified by Willy Sudiarto Raharjo 
+# Changelog
+# January 9, Upgraded to 8.0.16675, added rc.teamviewerd to provide teamviewer daemon
+
+PRGNAM=teamviewer
+VERSION=${VERSION:-8.0.16675}
+BUILD=${BUILD:-1wsr}
+
+if [ -z "$ARCH" ]; then
+  case "$( uname -m )" in
+    i?86) ARCH=i486 ;;
+    arm*) ARCH=arm ;;
+       *) ARCH=$( uname -m ) ;;
+  esac
+fi
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/build}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+
+if [ "$ARCH" = "i486" ]; then
+  DEBARCH=""
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "x86_64" ]; then
+  DEBARCH="_x64"
+  LIBDIRSUFFIX="64"
+else
+  echo "Package for $(uname -m) architecture is not available."
+  exit 1
+fi
+
+set -eu
+
+# Get the real version
+REAL_VER=$(ar p teamviewer_linux${DEBARCH}.deb control.tar.gz | tar xzO ./control | grep Version | cut -d\  -f2 | cut -d- -f1)
+if [ "$VERSION" != "$REAL_VER" ]; then
+  echo "Version of downloaded source [$REAL_VER] does not match version of SlackBuild [$VERSION]"
+  exit 1
+fi
+
+# We need this for later use
+MAIN_VER=$(echo $VERSION | cut -d . -f 1)
+
+rm -rf $PKG
+mkdir -p $TMP $PKG $OUTPUT
+cd $PKG
+ar p $CWD/teamviewer_linux${DEBARCH}.deb data.tar.gz | gzip -d | tar xv
+
+chown -R root:root .
+find . \
+ \( -perm 777 -o -perm 775 -o -perm 711 -o -perm 555 -o -perm 511 \) \
+ -exec chmod 755 {} \; -o \
+ \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
+ -exec chmod 644 {} \;
+
+find $PKG | xargs file | grep -e "executable" -e "shared object" | grep ELF \
+  | cut -f 1 -d : | xargs strip --strip-unneeded 2> /dev/null || true
+
+# Make a .desktop file
+mkdir -p $PKG/usr/share/applications
+cat $PKG/opt/teamviewer8/tv_bin/desktop/teamviewer-teamviewer8.desktop \
+  | sed -e 's/EXEC/teamviewer/' -e 's/ICON/teamviewer/' \
+  > $PKG/usr/share/applications/teamviewer.desktop
+
+# Create the generic executable
+( cd $PKG/usr/bin; ln -sf teamviewer$MAIN_VER teamviewer )
+
+# Link icon to /usr/share/pixmaps
+mkdir -p $PKG/usr/share/pixmaps
+ln -sf /opt/teamviewer8/tv_bin/desktop/teamviewer.png  $PKG/usr/share/pixmaps/teamviewer.png
+
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+
+# Move docs to official place
+mv $PKG/opt/teamviewer8/*.txt $PKG/usr/doc/$PRGNAM-$VERSION
+
+mkdir -p $PKG/etc/rc.d/
+install -m 0644 $CWD/rc.teamviewerd $PKG/etc/rc.d/rc.teamviewerd.new
+
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD.${PKGTYPE:-txz}
