@@ -1,0 +1,8 @@
+PRGNAM="teamviewer"
+VERSION="8.0.16675"
+HOMEPAGE="http://www.teamviewer.com/"
+DOWNLOAD="http://www.teamviewer.com/download/version_8x/teamviewer_linux.deb"
+MD5SUM="8615365b444eb3927cefbbf3dbed6ffa"
+DOWNLOAD_x86_64="http://www.teamviewer.com/download/version_8x/teamviewer_linux_x64.deb"
+MD5SUM_x86_64="4f718ad52ea9091fab4218968a3c1fd7"
+REQUIRES=""
